// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrums is created 1`] = `
<ol
  className="sc-bdVaJa flmxlQ"
/>
`;

exports[`Breadcrums item 1`] = `
<li
  aria-current="page"
  className="sc-bwzfXH cdQKDC"
/>
`;

exports[`breadcrums is created 1`] = `
<ol
  className="sc-bdVaJa flmxlQ"
/>
`;

exports[`Breadcrums item 1`] = `
<li
  aria-current="page"
  className="sc-bwzfXH hhqCxF"
/>
`;
